# xmas-rs

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/.cargo/: config.toml
app/src/: main.rs  uptime.rs  uptime_delay.rs
lib/app-core/: Cargo.toml
lib/app-core/src/: lib.rs
